Added Users + Devise, Foundation 5 framework

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,18 @@
 !!!
-%html{ lang: 'en-US' }
+%html{ lang: 'en' }
   %head
     %meta{ charset: 'utf-8' }
+
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
 
-    = stylesheet_link_tag 'application', media: 'all'
-    = javascript_include_tag 'application'
-    = csrf_meta_tags
+    %title= content_for?(:title) ? yield(:title) : 'Untitled'
 
-= yield
+    = stylesheet_link_tag 'application'
+    = javascript_include_tag 'modernizr'
+    = csrf_meta_tag
+
+  %body
+
+    = render 'layouts/navbar'
+
+    = javascript_include_tag 'application'
