Added name to users, roster page listing all users

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -6,6 +6,10 @@
     = f.label :email
     %br/
     = f.email_field :email, autofocus: true
+  .field
+    = f.label :name
+    %br
+    = f.text_field :name
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
