--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
             %li
               = link_to 'Weekly Schedule', '#'
             %li
-              = link_to 'House Roster', '#'
+              = link_to 'House Roster', roster_path
 
     .devise-notice
       - if notice
