--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,35 +1,36 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :name
-    %br
-    = f.text_field :name
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+%header.row
+  %h2.column.small-12 Edit #{resource_name.to_s.humanize} Settings
+
+= simple_form_for(resource, as: resource_name,
+  url: registration_path(resource_name), html: { method: :put }) do |f|
+  .row
+    .column.small-12
+      = f.error_notification
+
+    .column.small-12.medium-6
+      = f.input :name
+
+    .column.small-12.medium-6
+      = f.input :email
+
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+      .column.small-12
+        Currently awaiting confirmation for #{resource.unconfirmed_email}
+
+    .column.small-12.medium-6
+      = f.input :password, label: 'New Password',
+        placeholder: 'Leave blank if do not wish to change password'
+    .column.small-12.medium-6
+      = f.input :password_confirmation, label: 'Confirm New Password'
+    .column.small-12.medium-6
+      = f.input :current_password,
+        placeholder: 'Must enter current password to confirm changes'
+
+    .column.small-12
+      = f.button :submit, class: 'button small'
+
+.row#cancel-account
+  %p.column.small-12 Unhappy?
+  .column.small-12
+    = button_to 'Cancel my account', registration_path(resource_name),
+      data: { confirm: 'Are you sure?' }, method: :delete, class: 'button small'
