--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,5 @@
 .row
-  .column.small-12
-    %ul
-      - @users.each do |user|
-        %li
-          = user.name
+  %ul
+    - @users.each do |user|
+      %li.column.small-4
+        = user.name
