Added attributes for workshifts

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -15,7 +15,7 @@
             %li
               = link_to 'My Shifts', '#'
             %li
-              = link_to 'Weekly Schedule', '#'
+              = link_to 'Weekly Schedule', workshifts_path
             %li
               = link_to 'House Roster', roster_path
             - if user_signed_in?
