--- a/app/views/workshifts/_form.html.haml
+++ b/app/views/workshifts/_form.html.haml
@@ -3,12 +3,23 @@
     .column.small-12
       = f.error_notification
 
+    .column.small-10.large-8
+      = f.input :task, placeholder: 'Purpose of workshift'
+    .column.small-5.medium-4.large-2
+      = f.input :people_needed, label: 'Number needed', default: 1
+    .column.small-5.medium-4.large-2
+      = f.input :hours, default: 1
     .column.small-12.medium-6
       = f.input :start_time, ampm: true, minute_step: 15,
         input_html: { class: 'column small-4 medium-3 left' }
     .column.small-12.medium-6
       = f.input :end_time, ampm: true, minute_step: 15,
         input_html: { class: 'column small-4 medium-3 left' }
+    .column.small-12
+      = f.input :description, placeholder: 'Description of task'
+    .column.small-12
+      = f.input :day do
+        = f.select :day, Workshift.valid_days, include_blank: 'Select a weekday'
 
     .column.small-12
       = f.button :submit, class: 'button-small'
