added update_user_info cucumber feature

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,7 +13,7 @@
         %section.top-bar-section
           %ul.right
             %li
-              = link_to 'My Shifts', '#'
+              = link_to 'My Shifts', root_url
             %li
               = link_to 'Weekly Schedule', workshifts_path
             %li
