--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
 
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
 
-    %title= content_for?(:title) ? yield(:title) : 'Untitled'
+    %title= content_for?(:title) ? yield(:title) : 'BSC Workshift Scheduler'
 
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'modernizr'
