--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,40 +11,7 @@
     = javascript_include_tag 'modernizr'
     = csrf_meta_tag
 
-    -# This is all from the amazing realfavicongenerator.net
-    = favicon_link_tag '/favicons/apple-touch-icon-57x57.png',
-      rel: 'apple-touch-icon', sizes: '57x57', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-60x60.png',
-      rel: 'apple-touch-icon', sizes: '60x60', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-72x72.png',
-      rel: 'apple-touch-icon', sizes: '72x72', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-76x76.png',
-      rel: 'apple-touch-icon', sizes: '76x76', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-114x114.png',
-      rel: 'apple-touch-icon', sizes: '114x114', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-120x120.png',
-      rel: 'apple-touch-icon', sizes: '120x120', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-144x144.png',
-      rel: 'apple-touch-icon', sizes: '144x144', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-152x152.png',
-      rel: 'apple-touch-icon', sizes: '152x152', type: 'image/png'
-    = favicon_link_tag '/favicons/apple-touch-icon-180x180.png',
-      rel: 'apple-touch-icon', sizes: '180x180', type: 'image/png'
-    = favicon_link_tag '/favicons/favicon-16x16.png', rel: 'icon',
-      sizes: '16x16', type: 'image/png'
-    = favicon_link_tag '/favicons/favicon-32x32.png', rel: 'icon',
-      sizes: '32x32', type: 'image/png'
-    = favicon_link_tag '/favicons/favicon-96x96.png', rel: 'icon',
-      sizes: '96x96', type: 'image/png'
-    = favicon_link_tag '/favicons/favicon-194x194.png', rel: 'icon',
-      sizes: '194x194', type: 'image/png'
-    = favicon_link_tag '/favicons/android-chrome-192x192.png', rel: 'icon',
-      sizes: '192x192', type: 'image/png'
-    %link{ rel: 'manifest', href: '/favicons/manifest.json' }
-    %meta{ name: 'msapplication-TileColor', content: '#000000' }
-    %meta{ name: 'theme-color', content: '#ffffff' }
-    %meta{ name: 'msapplication-TileImage',
-      content: "#{image_path('/favicons/mstile-144x144.png')}" }
+    = render 'layouts/favicons'
 
     %meta{ name: 'mobile-web-app-capable', content: 'yes' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
