--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,11 +1,14 @@
-<h2><%= t 'devise.invitations.edit.header' %></h2>
+<h2>Set your password</h2>
 
-<%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
+<%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :invitation_token %>
 
-  <%= f.input :password %>
-  <%= f.input :password_confirmation %>
+  <p><%= f.label :password %><br />
+  <%= f.password_field :password %></p>
 
-  <%= f.submit t("devise.invitations.edit.submit_button") %>
+  <p><%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %></p>
+
+  <p><%= f.submit "Set my password" %></p>
 <% end %>
