--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -1,11 +1,11 @@
-<h2><%= t "devise.invitations.new.header" %></h2>
+<h2>Send invitation</h2>
 
-<%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
+<%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
   <%= devise_error_messages! %>
 
-<% resource.class.invite_key_fields.each do |field| -%>
-  <%= f.input field %>
-<% end -%>
-
-<%= f.submit t("devise.invitations.new.submit_button") %>
+  <p><%= f.label :email %><br />
+  <%= f.text_field :email %></p>
+  <p><%= f.submit "Send an invitation" %></p>
 <% end %>
+
+<%= link_to "Home", after_sign_in_path_for(resource_name) %><br />
