got the views working

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -10,5 +10,5 @@
   <p><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.submit "Set my password" %></p>
+  <p><%= f.submit "Set my password", class: 'button small' %></p>
 <% end %>
