--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -5,7 +5,7 @@
 
   <p><%= f.label :email %><br />
   <%= f.text_field :email %></p>
-  <p><%= f.submit "Send an invitation" %></p>
+  <p><%= f.submit "Send an invitation", class: 'button small'%></p>
 <% end %>
 
 <%= link_to "Home", after_sign_in_path_for(resource_name) %><br />
