prevent user from editing their name

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -8,7 +8,7 @@
       = f.error_notification
 
     .column.small-12.medium-6
-      = f.input :name
+      = f.input :name, input_html: { readonly: true }
 
     .column.small-12.medium-6
       = f.input :email
