--- a/app/views/workshifts/_show.html.haml
+++ b/app/views/workshifts/_show.html.haml
@@ -1,5 +1,7 @@
 .row
   .column.small-12
+    %h1= @workshift.assigned_workshifts
+  .column.small-12
     %h1= @workshift.task
   .column.small-4
     Category:
