updated policy to be model based rather than headless

--- a/app/views/users/_assigned_workshifts.html.haml
+++ b/app/views/users/_assigned_workshifts.html.haml
@@ -19,8 +19,8 @@
             %td= workshift.formatted_end_time
             %td= assigned_workshift.completed.to_s
             %td= link_to 'Show', workshift
-            - if policy(:workshift_edit).edit?
+            - if policy(:workshift).edit?
               %td= link_to 'Edit', edit_workshift_path(workshift)
-            - if policy(:workshift_edit).destroy?
+            - if policy(:workshift).destroy?
               %td= link_to 'Destroy', workshift, method: :delete,
                   data: { confirm: 'Are you sure?' }
