--- a/app/views/workshifts/_show.html.haml
+++ b/app/views/workshifts/_show.html.haml
@@ -1,13 +1,13 @@
 .row
   .column.small-12
-    %h1= @workshift.assigned_workshifts
-  .column.small-12
     %h1= @workshift.task
   .column.small-4
     Category:
     = link_to @workshift.category_name, @workshift.category
   .column.small-4
     %p Hours: #{@workshift.hours}
+  .column.small-8
+    %p Assigned Workers: #{@workshift.assignedworkers}
   .column.small-4
     %p Day of the week: #{@workshift.weekday}
   .column.small-4
