--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -7,30 +7,48 @@
     .column.small-12
       = f.error_notification
 
-    .column.small-12.medium-6
-      = f.input :name
+    .settings-section.column.small-12.medium-6
+      %h3.column.small-12 Personal Information
+      .column.small-12
+        = f.input :name
 
-    .column.small-12.medium-6
-      = f.input :email
+      .column.small-12
+        = f.input :email
 
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       .column.small-12
         Currently awaiting confirmation for #{resource.unconfirmed_email}
 
-    .column.small-12.medium-6
-      = f.input :password, label: 'New Password',
-        placeholder: 'Leave blank if do not wish to change password'
-    .column.small-12.medium-6
-      = f.input :password_confirmation, label: 'Confirm New Password'
-    .column.small-12.medium-6
-      = f.input :current_password,
-        placeholder: 'Must enter current password to confirm changes'
+    .settings-section.column.small-12.medium-6
+      %h3.column.small-12 Contact Information
+      .column.small-12.medium-6
+        = f.input :room_number, label: 'Room Number',
+          placeholder: 'Your room number'
+      .column.small-12.medium-6
+        = f.input :phone_number, label: 'Phone Number',
+          placeholder: '(012)345-6789'
+      .column.small-6
+        = f.input :display_phone_number
+      .column.small-6
+        = f.input :display_email
 
-    .column.small-12
-      = f.button :submit, class: 'button small'
+    .column.small-12.spacer
 
-.row#cancel-account
-  %p.column.small-12 Unhappy?
-  .column.small-12
-    = button_to 'Cancel my account', registration_path(resource_name),
-      data: { confirm: 'Are you sure?' }, method: :delete, class: 'button small'
+    .settings-section.column.small-12.medium-6
+      %h4.column.small-12 Change Password
+      %small.column.small-12 Leave blank unless you wish to change your password
+      .column.small-12.medium-6
+        = f.input :password, label: 'New Password'
+      .column.small-12.medium-6
+        = f.input :password_confirmation, label: 'Confirm New Password'
+
+    .column.small-12.spacer
+
+    .settings-section.column.small-12.medium-6.left
+      %h4.column.small-12 Submit
+      .column.small-12
+        = f.input :current_password,
+          placeholder: 'Must enter current password to confirm changes'
+
+      .column.small-12
+        = f.button :submit, class: 'button small'
