moving user invitation logic from controller to model

--- a/app/views/devise/invitations/new.html.haml
+++ b/app/views/devise/invitations/new.html.haml
@@ -6,6 +6,8 @@
       Enter new user information in **Comma Separated** format, with names
       in the first column and email addresses in the second.
 
+      [Example Input](http://pastebin.com/Kaedc37g)
+
 .row
   = form_tag invite_users_path do
     .column.small-12
