--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -16,5 +16,5 @@
 
   %h3.column.small Assigned Workshifts
   .column.small-12
-    = render 'users/assigned_workshifts',
-      assigned_workshifts: @assigned_workshifts
+    = render 'users/workshift_assignments',
+      workshift_assignments: @workshift_assignments
