--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -24,7 +24,7 @@
                 %ul.dropdown
                   %li
                     = link_to 'Settings', settings_path
-                  - if true # will be check for workshift manager-ness
+                  - if policy(:user).add_users?
                     %li
                       = link_to 'Add Users', add_users_path
                   %li
