--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,6 +1,8 @@
 %p#notice= notice
 
+= render 'show'
 
-= link_to 'Edit', edit_category_path(@category)
-\|
+- if policy(:workshift).edit?
+  = link_to 'Edit', edit_category_path(@category)
+  \|
 = link_to 'Back', categories_path
