--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -3,6 +3,8 @@
 = render 'show'
 
 - if policy(:workshift).edit?
-  = link_to 'Edit', edit_category_path(@category)
-  \|
-= link_to 'Back', categories_path
+  .row
+    .column.small-12
+      = link_to 'Edit', edit_category_path(@category)
+      \|
+      = link_to 'Back', categories_path
