--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -16,6 +16,9 @@
               = link_to 'My Shifts', root_url
             %li
               = link_to 'Weekly Schedule', workshifts_path
+            - if policy(:user).modify_categories?
+              %li
+                = link_to 'Categories', categories_path
             %li
               = link_to 'House Roster', roster_path
             - if user_signed_in?
@@ -24,12 +27,11 @@
                 %ul.dropdown
                   %li
                     = link_to 'Settings', settings_path
+                  %li
+                    = link_to 'Workshift Preferences', preferences_path
                   - if policy(:user).add_users?
                     %li
                       = link_to 'Add Users', add_users_path
-                  - if policy(:user).modify_categories?
-                    %li
-                      = link_to 'Categories', categories_path
                   %li
                     = link_to 'Logout', logout_path
             - else
