--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -25,7 +25,7 @@
 
 
 
-  %h3.column.small Assigned Workshifts
+  %h3.column.small Current Workshift Assignments
   .column.small-12
     = render 'users/workshift_assignments',
       workshift_assignments: @workshift_assignments
