--- a/app/views/workshifts/_show.html.haml
+++ b/app/views/workshifts/_show.html.haml
@@ -7,7 +7,11 @@
   .column.small-4
     %p Hours: #{@workshift.hours}
   .column.small-8
-    %p Assigned Workers: #{@workshift.assignedworkers}
+    %span Assigned Workshifter: 
+    - if @workshift.user
+      = link_to @workshift.user.name, user_profile_path(@workshift.user)
+    - else
+      None
   .column.small-4
     %p Day of the week: #{@workshift.weekday}
   .column.small-4
