Added main logic for user hours.
* Used clockwork gem to automate weekly tasks
* Created WeeklyReport object to keep past report information
* Workshift manager is able to view reports and download them

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -20,6 +20,9 @@
               - if policy(:category).edit?
                 %li
                   = link_to 'Categories', categories_path
+              - if policy(:workshift).reports?
+                %li
+                  = link_to 'Reports', reports_workshifts_path
             %li
               = link_to 'House Roster', roster_path
             - if user_signed_in?
