--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -29,3 +29,8 @@
   .column.small-12
     = render 'users/workshift_assignments',
       workshift_assignments: @workshift_assignments
+
+  %h3.column.small History of Workshift Assignments
+  .column.small-12
+    = render 'users/workshift_assignments_history',
+      workshift_assignments: @workshift_assignments_history
