--- a/app/views/workshifts/index.html.haml
+++ b/app/views/workshifts/index.html.haml
@@ -25,8 +25,8 @@
             %td= link_to workshift.category_name, workshift.category
             %td= workshift.hours
             %td= workshift.weekday
-            %td= workshift.formatted_start_time
-            %td= workshift.formatted_end_time
+            %td= workshift.formatted_localized_start_time
+            %td= workshift.formatted_localized_end_time
             - if policy(:workshift).edit?
               %td= link_to 'Edit', edit_workshift_path(workshift)
             - if policy(:workshift).destroy?
