pretend that UTC time is actually local time

--- a/app/views/workshifts/_show.html.haml
+++ b/app/views/workshifts/_show.html.haml
@@ -15,9 +15,9 @@
   .column.small-4
     %p Day of the week: #{@workshift.weekday}
   .column.small-4
-    %p Shift Start: #{@workshift.formatted_localized_start_time}
+    %p Shift Start: #{@workshift.formatted_start_time}
   .column.small-4
-    %p Shift End: #{@workshift.formatted_localized_end_time}
+    %p Shift End: #{@workshift.formatted_end_time}
   .column.small-12
     %h4 Description
     :markdown
