--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -20,9 +20,9 @@
               - if policy(:category).edit?
                 %li
                   = link_to 'Categories', categories_path
-              - if policy(:workshift).reports?
+              - if policy(:user).reports?
                 %li
-                  = link_to 'Reports', reports_workshifts_path
+                  = link_to 'Reports', reports_path
             %li
               = link_to 'House Roster', roster_path
             - if user_signed_in?
