--- a/app/views/users/_workshift_assignments.html.haml
+++ b/app/views/users/_workshift_assignments.html.haml
@@ -1,3 +1,4 @@
+#verifier_list{data: {verifiers: @verifier_list.to_json}}
 .row
   .column.small-12
     %table
@@ -23,10 +24,7 @@
             - if policy(:workshift).edit?
               %td= link_to 'Edit', edit_workshift_path(workshift_assignment.workshift)
             %td
-              / = simple_form_for(workshift_assignment) do |f|
-              /   = f.input :verifier, collection: User.all, include_blank: true
-              /   = f.button :submit, class: 'button-small'
               = form_tag assignment_check_off_path(workshift_assignment) do
-                = label_tag :verifier, "Verifier"
-                = collection_select :verifier, nil, User.all, :id, :name, include_blank: true
+                = text_field_tag :verifier_name, nil
+                = hidden_field_tag :verifier, nil
                 = submit_tag "Check Off"
