--- a/app/views/users/_workshift_assignments_history.html.haml
+++ b/app/views/users/_workshift_assignments_history.html.haml
@@ -17,7 +17,11 @@
             %td= workshift_assignment.task
             %td= workshift_assignment.sign_off_time
             %td= workshift_assignment.status
-            %td= link_to workshift_assignment.verifier.name, user_profile_path(workshift_assignment.verifier)
+            %td
+              - if workshift_assignment.verifier
+                = link_to workshift_assignment.verifier.name, user_profile_path(workshift_assignment.verifier)
+              - else
+              None
             %td= link_to 'Show', workshift_assignment.workshift
             - if policy(:workshift).edit?
               %td= link_to 'Edit', edit_workshift_path(workshift_assignment.workshift)
