--- a/app/views/users/_time_preferences.html.haml
+++ b/app/views/users/_time_preferences.html.haml
@@ -10,17 +10,17 @@
         %table
           %thead
             %tr
-              %th 
+              %th
               - if current_user.schedule == {} then current_user.schedule = User.create_schedule end
               - User.available_days.each do |day|
-                %th=day
+                %th{:width => "150"}=day
           %tbody
             - User.available_hours.each do |slot|
               %tr
                 %td= slot
                 - current_user.schedule.each do |day, hours|
                   %td
-                    = hidden_field_tag "schedule[#{day}][#{slot}]", 0
+                    = hidden_field_tag "schedule[#{day}][#{slot}]_tag", 0
                     = check_box_tag "schedule[#{day}][#{slot}]",  "yes", !!(current_user.schedule[day][slot])
         .column.small-12
           = submit_tag 'Update Schedule', class: 'button small'
