fixing Travis build

--- a/app/views/users/view_report.html.haml
+++ b/app/views/users/view_report.html.haml
@@ -3,4 +3,4 @@
     %h3 Weekly Hours Report for #{@report.date}
   .column.small-12
     :markdown
-      #{simple_format(@report.report)}
+      #{simple_format(@report.text)}
